Крч код вроде работает. Осталось дочистить его и сделать все что в TODO ну и запускать